--- a/packages/core/docs/2/2.md
+++ b/packages/core/docs/2/2.md
@@ -2,4 +2,16 @@
 - **From:** 📦 Core / Array
 
 ## Description
-""
+Push a value to an array
+## Format:
+```
+array::push ->&$array ->$val
+```
+
+## Example:
+```
+$var: array::malloc
+$to_push: malloc string Hello
+
+array::push ->&$var ->$to_push
+```
