--- a/packages/core/docs/2/3.md
+++ b/packages/core/docs/2/3.md
@@ -2,4 +2,10 @@
 - **From:** 📦 Core / Array
 
 ## Description
-""
+Push if capacity available
+## Format:
+```
+array::push_if_cap_available ->&array ->$val
+```
+
+⚠️ It may reject silent if size isn't within capacity, not recommended
