--- a/packages/core/docs/2/6.md
+++ b/packages/core/docs/2/6.md
@@ -1,5 +1,9 @@
-# array::capacity
+# array::cap
 - **From:** 📦 Core / Array
 
 ## Description
-""
+Returns the capacity of the array
+## Format:
+```
+$len: array::cap ->&$array
+```
