--- a/packages/core/docs/2/4.md
+++ b/packages/core/docs/2/4.md
@@ -2,4 +2,12 @@
 - **From:** 📦 Core / Array
 
 ## Description
-""
+Removes the last element from an array & returns it
+## Format:
+```
+# If you want to discard the result
+array::pop ->&$array 
+
+# If you want to collect it
+$var: array::pop ->&$array
+```    
