--- a/packages/core/docs/2/7.md
+++ b/packages/core/docs/2/7.md
@@ -2,4 +2,11 @@
 - **From:** 📦 Core / Array
 
 ## Description
-""
+Completely clears the array
+## Format:
+```
+array::clear ->&array
+```
+
+## Note:
+It is advisable to drop() the array if you want to clear it from memory
